--- a/Presentation.Rmd
+++ b/Presentation.Rmd
@@ -537,17 +537,20 @@ players_with_stats_salary <- drop_na(players_with_stats_salary)
 ```
 
 <br>
+
 ### Below we take a look at 3P (black), FT (blue), FG (green), 2P (pink) relative to overall points per game.
+
 <br>
 
 ```{r, message=FALSE, echo=FALSE}
 eda_plot <- ggplot() +
-  geom_point(data = players_with_stats_salary, aes(x = `3P`, y = POINTS), color="black") +
-  geom_point(data = players_with_stats_salary, aes(x = FT, y = POINTS), color="blue") +
-  geom_point(data = players_with_stats_salary, aes(x = FG, y = POINTS), color="green") +
-  geom_point(data = players_with_stats_salary, aes(x = `2P`, y = POINTS), color="pink") +
+  geom_point(data = players_with_stats_salary, aes(x = `3P`, y = POINTS, color="3P")) +
+  geom_point(data = players_with_stats_salary, aes(x = FT, y = POINTS, color="FT")) +
+  geom_point(data = players_with_stats_salary, aes(x = FG, y = POINTS, color="FG")) +
+  geom_point(data = players_with_stats_salary, aes(x = `2P`, y = POINTS, color="2P")) +
+  scale_color_manual("", breaks=c("3P", "FT", "FG", "2P"), values=c("3P"="green", "FT"="blue", "FG"="pink", "2P"="black")) +
   xlab("Performance Statistics Points") + ylab("Points per Game") +
-  ggtitle("Points Relative to other Performance Stats")
+  ggtitle("Points Relative to other Performance Stats") + theme(plot.title = element_text(hjust = 0.5))
 
 eda_plot
 
@@ -583,7 +586,7 @@ points_predicted_plot <- ggplot() +
   geom_point(data = test_set_points, aes(x = seq(1:dim(test_set_points)[1]), y = pred), color="blue") +
   geom_smooth(data = test_set_points, aes(x = seq(1:dim(test_set_points)[1]), y = pred)) +
   xlab("Player Index") + ylab("Points") + ylim(0, range(test_set_points$pred)[2]) +
-  ggtitle("Points Predicted by other Performance Stats")
+  ggtitle("Points Predicted by other Performance Stats") + theme(plot.title = element_text(hjust = 0.5))
 
 # points_predicted_plot
 # coef(ppg_model)
@@ -592,7 +595,7 @@ points_predicted_plot <- ggplot() +
 actual_v_pred_points <- ggplot(data = test_set_points, aes(x = POINTS, y = pred)) +
   geom_point() + geom_smooth() +
   xlab("Actual PPG") + ylab("Predicted PPG") + 
-  ggtitle("Actual vs Predicted Points Per Game")
+  ggtitle("Actual vs Predicted Points Per Game") + theme(plot.title = element_text(hjust = 0.5))
 actual_v_pred_points
 
 ```
@@ -614,7 +617,7 @@ mini_table <- mini_table %>%
 
 mini_table %>%
   kable("html") %>%
-  kable_styling(bootstrap_options = "striped", full_width = F, position = "center")
+  kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 
 ```
 
@@ -681,14 +684,14 @@ wiki_only_plot <- ggplot() +
   geom_smooth(data = test_set, aes(x = seq(1:dim(test_set)[1]), y = salary_from_wiki), color=
                 "red") +
   xlab("Player Index") + ylab("Salary") + 
-  ggtitle("Salary vs. WikiViews")
+  ggtitle("Salary vs. WikiViews") + theme(plot.title = element_text(hjust = 0.5))
 
 # actual vs. predicted
 # SHOW THIS TO SHOW HOW IT DIDN'T WORK WELL
 wiki_actual_v_pred <- ggplot(data = test_set, aes(x = salary, y = salary_from_wiki)) +
   geom_point() + geom_smooth() +
   xlab("Actual Salary") + ylab("Predicted Salary") + 
-  ggtitle("WikiViews")
+  ggtitle("WikiViews") + theme(plot.title = element_text(hjust = 0.5))
 #````````````````````````````````````````````````````````````
 
 # Try model using just twitter stats, no page-view stats
@@ -712,12 +715,12 @@ twitter_only_plot <- ggplot() +
   geom_smooth(data = test_set, aes(x = seq(1:dim(test_set)[1]), y = salary_from_twitter), color=
                 "green") +
   xlab("Player Index") + ylab("Salary") +  ylim(0, range(test_set$salary_from_wiki)[2]) +
-  ggtitle("Salary vs. Twitter Stats")
+  ggtitle("Salary vs. Twitter Stats") + theme(plot.title = element_text(hjust = 0.5))
 
 twitter_actual_v_pred <- ggplot(data = test_set, aes(x = salary, y = salary_from_twitter)) +
   geom_point() + geom_smooth() +
   xlab("Actual Salary") + ylab("Predicted Salary") + 
-  ggtitle("Twitter Stats")
+  ggtitle("Twitter Stats") + theme(plot.title = element_text(hjust = 0.5))
 #````````````````````````````````````````````````````````````````````
 
 # Those models are bad - let's use all three predictors next!
@@ -740,12 +743,12 @@ media_salary_plot <- ggplot() +
   geom_point(data = test_set, aes(x = seq(1:dim(test_set)[1]), y = salary_from_media), color="blue") +
   geom_smooth(data = test_set, aes(x = seq(1:dim(test_set)[1]), y = salary_from_media)) +
   xlab("Player Index") + ylab("Salary") + ylim(0, range(test_set$salary_from_wiki)[2]) +
-  ggtitle("Salary vs. Both")
+  ggtitle("Salary vs. Both") + theme(plot.title = element_text(hjust = 0.5))
 
 all_social_actual_v_pred <- ggplot(data = test_set, aes(x = salary, y = salary_from_media)) +
   geom_point() + geom_smooth() +
   xlab("Actual Salary") + ylab("Predicted Salary") + 
-  ggtitle("All Media Stats")
+  ggtitle("All Media Stats") + theme(plot.title = element_text(hjust = 0.5))
 
 # Plot side-by-side
 grid.arrange(wiki_only_plot, twitter_only_plot, media_salary_plot, nrow = 1, ncol = 3)
@@ -757,7 +760,7 @@ grid.arrange(wiki_actual_v_pred, twitter_actual_v_pred, all_social_actual_v_pred
 #### Compare RMSE of each model:
 
 <br>
-
+(Note: RMSE is scaled in millions (i.e. 6.7 million))
 ```{r, message=FALSE, echo=FALSE, warning=FALSE}
 # Gather RMSE and show
 rmse_tib <- tibble(wiki_rmse = rmse(glm_train, test_set))
@@ -766,7 +769,7 @@ rmse_tib <- rmse_tib %>%
          media_rmse = rmse(salary_vs_media_model, test_set))
 rmse_tib %>%
   kable("html") %>%
-  kable_styling(bootstrap_options = "striped", full_width = F, position = "center")
+  kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 <br>
 
@@ -923,6 +926,6 @@ plot4 <- val_from_salary_results %>%
 grid.arrange(plot1, plot2, plot3, plot4, nrow = 2, ncol = 2)
 ```
 
-### $%*&! Looks weird. Moving on.
+### $%*&! Looks weird. Done.
 <br>
 <br>
